Fixed uneven top and bottom margin in mobile design.

--- a/styles/section.css
+++ b/styles/section.css
@@ -78,5 +78,6 @@ section h2 {
 @media screen and (max-width: 1280px) {
     section {
         width: 90%;
+        float: none;
     }
 }
